--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <6>hello world</6>
 <p>how are you</p>
 </1>yooooo</1>
+<img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg
+"
