--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <p>how are you</p>
 </1>yooooo</1>
 <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg"
+<img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg"
