--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-</6>hello world</6>
+<p style = "color:red;"> hello world </p>
 <p>how are you</p>
 <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
