--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p style = "color:green;"> hello world </p>
-<i> how are you </i>
+<i><h6> how are you </i></h6>
 <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
