--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p style = "color:green;"> hello world </p>
-<i><font size="12" how are you </i></font>
+<b><i><font size="12" how are you </i></font></b>
 <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
