--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p style = "color:green;"> hello world </p>
-<b><i><font size="12" how are you </i></font></b>
+<i> how are you </i>
 <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
