--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<p style = "color:green; font-size:32px;">hello world</p><font>
+<p style = "color:green;"><font size="32">hello world</p><font>
 <i><font size="6">how are you</i></font>
 <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
