--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<p style = "color:green;"><font size="32">hello world</p><font>
-<i><font size="6">how are you</i></font>
-<img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8" />
+  <title>MY TITLE HERE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/my_style.css" />
+  <script src="js/my_javascript.js"></script>
+</head>
+<body>
+
+  <!--SUPER SIMPLE TEMPLATE-->
+  <p>
+    <p style = "color:green;"><font size="32">hello world</p><font>
+    <i><font size="6">how are you</i></font>
+    <img src="http://www.aubergedusoleil.com/images/dining/gallery/restaurant-view-gallery.jpg" />
+  </p>
+</div>
+<a href="./About.html">About</a>
+<a href="./Menu.html">Menu</a>
+</body>
+</html>
